# ROSEndEffector2

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins.xml  setup.py
configs/: heri_II.yaml  robotiq_3f.yaml
configs/srdf/: heri_II.srdf  qbhand.srdf  robotiq_2f_140.srdf  robotiq_3f.srdf
configs/urdf/: heri_II.urdf  schunk.urdf
include/end_effector/: FindActions.h  Parser.h  ParserMoveIt.h  RosActionServer.h  RosServiceHandler.h  UniversalRosEndEffectorExecutor.h  Utils.h  UtilsEigen.h  UtilsYAML.h
include/end_effector/GraspingActions/: ActionGeneric.h  ActionPrimitive.h
include/end_effector/HAL/: DummyHal.h  DummyHalPlugin.h  EEHal.h  EEHalPlugin.h
launch/: EEHalExecutor_launch.py  EEHalExecutor_launch.xml  find_actions_launch.xml  rosee_startup.launch  rosee_startup_launch.py  test_rosee_startup_launch.py
launch/old_xml/: EEHalExecutor_launch.xml  rosee_startup_launch.xml
scripts/: send_action.py
src/: FindActions.cpp  Parser.cpp  ParserMoveIt.cpp  RosActionServer.cpp  RosServiceHandler.cpp  UniversalFindActions.cpp  UniversalRosEndEffector.cpp  UniversalRosEndEffectorExecutor.cpp
src/GraspingActions/: Action.cpp
src/HAL/: DummyHal.cpp  DummyHalPlugin.cpp  EEHal.cpp  EEHalExecutor.cpp  EEHalPlugin.cpp
test/: testUtils.h  test_composedAction.cpp  test_ee_interface.cpp  test_find_pinches.cpp  test_find_trigs.cpp  test_send_action.cpp  test_service_handler.cpp  test_timedAction.cpp
